# vadadee-berry

./: .gitignore  Cargo.toml  Cross.toml  LICENSE  README.md  jokes_export.txt  scratch.rs  settings.gradle
.cargo/: config.toml
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/vadadee/berry/: MainActivity.java
gradle/: libs.versions.toml
packaging/macos/: Info.plist  make_macos_installer.sh
scripts/: build-android.sh  env-android.sh
src/: animation.rs  app.rs  audio_extract.rs  av_ui.rs  blend.rs  export_audio.rs  export_worker.rs  fonts.rs  gradient_ui.rs  history.rs  icons.rs  io.rs  layer_cache.rs  left_dock.rs  lib.rs  main.rs  node_editor_ui.rs  path_physics.rs  perf.rs  render.rs  screen_capture.rs  spatial_index.rs  sys_stats.rs  text_glyph.rs  theme.rs  ui.rs  video_decode.rs
src/canvas/: mod.rs
src/collab/: desktop.rs  mod.rs  protocol.rs  relay.rs  stub.rs  sync_project.rs
src/document/: animation.rs  av_clip.rs  expr.rs  flowchart.rs  mod.rs  music.rs  node.rs  node_graph.rs  path_effects.rs  septic.rs  shading.rs  style.rs
src/mcp/: drawing.rs  mod.rs  node_editor.rs  path_parse.rs
src/raster/: mod.rs
src/recorder/: async_bridge.rs  async_recorder.rs  mod.rs  sync.rs
src/shading/: cpu_effects.rs  cpu_hex_export.rs  graph_blur.rs  mod.rs  procedural_blackhole.rs  wgpu_pass.rs
src/shading/presets/: blackhole.wgsl  blackhole_gpu.wgsl  crt.wgsl  vignette.wgsl
src/tools/: mod.rs  weight_flow.rs
