[package]
name = "vadadee-berry"
version = "0.1.0"
edition = "2024"
description = "Vadadee Berry — vector graphics editor in Rust (egui + wgpu)"
license = "MIT"
readme = "README.md"

[lib]
name = "vadadee_berry"
path = "src/lib.rs"

[[bin]]
name = "vadadee-berry"
path = "src/main.rs"

[dependencies]
eframe = { version = "0.34.3", default-features = true, features = ["default_fonts", "wgpu", "persistence", "wayland", "x11"] }
egui = "0.34.3"
egui_extras = { version = "0.34.3", features = ["svg"] }
wgpu = "29.0.1"
kurbo = "0.13.1"
lyon = "1.0.1"
glam = "0.30.5"
usvg = "0.45.1"
resvg = "0.45.1"
tiny-skia = "0.11.4"
rfd = "0.15.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
thiserror = "2.0.17"
log = "0.4.28"
env_logger = "0.11.8"
directories = "6.0.0"
undo = "0.52.0"
indexmap = { version = "2.11.4", features = ["serde"] }
rustc-hash = "2.1.1"
fontdb = "0.23.0"
ttf-parser = "0.25.1"
kramaframe = { path = "../kramaframe" }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
arboard = { version = "3", features = ["wayland-data-control", "image-data"] }
device_query = "4.0.1"
geo = "0.29"

[profile.release]
opt-level = 3
lto = "thin"