[package]
name = "vadadee-berry"
version = "0.1.0"
edition = "2024"
description = "Vadadee Berry — vector graphics editor in Rust (egui + wgpu)"
license = "MIT"
readme = "README.md"

[lib]
name = "vadadee_berry"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "vadadee-berry"
path = "src/main.rs"
required-features = ["desktop"]

[features]
default = ["desktop"]
desktop = []

[dependencies]
eframe = { version = "0.34.3", default-features = false, features = ["default_fonts", "wgpu", "persistence", "wgpu_no_default_features"] }
egui = "0.34.3"
egui_extras = { version = "0.34.3", features = ["svg"] }
wgpu = "29.0.1"
kurbo = "0.13.1"
lyon = "1.0.1"
glam = "0.30.5"
usvg = "0.45.1"
resvg = "0.45.1"
tiny-skia = "0.11.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
thiserror = "2.0.17"
log = "0.4.28"
directories = "6.0.0"
undo = "0.52.0"
indexmap = { version = "2.11.4", features = ["serde"] }
rustc-hash = "2.1.1"
fontdb = "0.23.0"
ttf-parser = "0.25.1"
kramaframe = { path = "../kramaframe" }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
geo = "0.29"
base64 = "0.22"
libloading = "0.8"
rodio = { version = "0.22.2", default-features = false, features = ["playback", "symphonia-mp3", "symphonia-isomp4", "symphonia-wav", "symphonia-aac"] }

[target.'cfg(not(target_os = "android"))'.dependencies]
eframe = { version = "0.34.3", default-features = false, features = ["accesskit", "wayland", "x11"] }
env_logger = "0.11.8"
rfd = "0.15.4"
arboard = { version = "3", features = ["wayland-data-control", "image-data"] }
device_query = "4.0.1"

[target.'cfg(target_os = "android")'.dependencies]
eframe = { version = "0.34.3", default-features = false, features = ["android-game-activity"] }
android_logger = "0.14.1"
winit = { version = "0.30.13", features = ["android-game-activity"] }

[profile.release]
opt-level = 3
lto = "thin"

[profile.dev.package."*"]
opt-level = 2
