[package]
name = "vadadee-berry"
version = "0.1.0"
edition = "2024"
description = "Creative tool combining vector graphics, video timeline, shaders, image editing, flowcharts and music sequencer — GPU-accelerated, built with egui and wgpu"
authors = ["CosmoBunny", "ANGSUDO"]
keywords = ["graphics", "video", "animation", "shader", "egui"]
categories = ["graphics", "multimedia", "gui"]
license = "MIT"
readme = "README.md"

[lib]
name = "vadadee_berry"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[[bin]]
name = "vadadee-berry"
path = "src/main.rs"

[[bin]]
name = "vadadee-mcp-stdio"
path = "src/bin/vadadee_mcp_stdio.rs"

[dependencies]
eframe = { version = "0.34.3", default-features = false, features = ["default_fonts", "wgpu", "persistence", "wgpu_no_default_features"] }
egui = "0.34.3"
egui-wgpu = "0.34.3"
pollster = "0.4"
bytemuck = { version = "1.24", features = ["derive"] }
egui_extras = { version = "0.34.3", features = ["svg"] }
wgpu = "29.0.1"
kurbo = "0.13.1"
lyon = "1.0.1"
glam = "0.30.5"
usvg = "0.45.1"
resvg = "0.45.1"
tiny-skia = "0.11.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
thiserror = "2.0.17"
log = "0.4.28"
directories = "6.0.0"
undo = "0.52.0"
indexmap = { version = "2.11.4", features = ["serde"] }
rustc-hash = "2.1.1"
fontdb = "0.23.0"
ttf-parser = "0.25.1"
kramaframe = "0.2.3"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp"] }
geo = "0.29"
base64 = "0.22"
libloading = "0.8"
rodio = { version = "0.22.2", default-features = false, features = ["playback", "symphonia-mp3", "symphonia-isomp4", "symphonia-wav", "symphonia-aac"] }
symphonia = { version = "0.5.5", default-features = false, features = ["aac", "flac", "isomp4", "mkv", "mp3", "vorbis", "wav"] }
hound = "3.5.1"
rayon = "1.10"
# ── Host (non-Android) shared deps ────────────────────────────────────────────
[target.'cfg(not(target_os = "android"))'.dependencies]
env_logger = "0.11.8"
rfd = "0.15.4"
arboard = { version = "3", features = ["image-data"] }
device_query = "4.0.1"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }
tokio-tungstenite = { version = "0.23", features = ["connect"] }
futures-util = "0.3"
aes-gcm = "0.10"
rand = "0.8"
sha2 = "0.10"

# ── Linux: Wayland/X11 + ScreenCast (ashpd) + PipeWire continuous capture ─────
[target.'cfg(target_os = "linux")'.dependencies]
eframe = { version = "0.34.3", default-features = false, features = ["accesskit", "wayland", "x11"] }
arboard = { version = "3", features = ["wayland-data-control"] }
# async-io only — not Tokio (avoids zbus reactor panics with accesskit).
ashpd = { version = "0.13", default-features = false, features = ["async-io", "screencast"] }
pipewire = { version = "0.8", features = ["v0_3_44"] }

# ── macOS / Windows: no Wayland ────────────────────────────────────────────────
[target.'cfg(any(target_os = "macos", target_os = "windows"))'.dependencies]
eframe = { version = "0.34.3", default-features = false, features = ["accesskit"] }

[target.'cfg(target_os = "android")'.dependencies]
eframe = { version = "0.34.3", default-features = false, features = ["android-game-activity"] }
android_logger = "0.14.1"
winit = { version = "0.30.13", features = ["android-game-activity"] }

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
panic = "abort"
strip = "symbols"

# Release + debuginfo for cargo-flamegraph / perf (no symbol strip).
#   cargo flamegraph --profile profiling --bin vadadee-berry
[profile.profiling]
inherits = "release"
debug = true
strip = "none"
# Thin LTO: much faster rebuilds than fat while still optimized.
lto = "thin"

[profile.dev.package."*"]
opt-level = 2
